[package]
name = "workflow_trends"
version = "0.1.0"
edition = "2021"
authors = ["Xymist <james@jamieduerden.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
csv-async = { version = "1.2.5", features = ["tokio"] }
nom = "7.1.3"
plotters = "0.3.4"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
simple_moving_average = "0.1.2"
tokio = { version = "1.26.0", features = ["full"] }

[profile.release]
debug = true
